external-crates/move/crates/move-compiler/tests/move_check/expansion/use_spec_function_as_normal_function.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/use_spec_function_as_normal_function.move:4:16
  │
4 │         define foo(): bool { true }
  │                ^^^
  │                │
  │                Unexpected 'foo'
  │                Expected ':'

error[E03003]: unbound module member
   ┌─ tests/move_check/expansion/use_spec_function_as_normal_function.move:10:18
   │
 2 │ module X {
   │        - Module '0x2::X' declared here
   ·
10 │     use 0x2::X::{foo, bar as baz};
   │                  ^^^ Invalid 'use'. Unbound member 'foo' in module '0x2::X'

error[E03003]: unbound module member
   ┌─ tests/move_check/expansion/use_spec_function_as_normal_function.move:10:23
   │
 2 │ module X {
   │        - Module '0x2::X' declared here
   ·
10 │     use 0x2::X::{foo, bar as baz};
   │                       ^^^ Invalid 'use'. Unbound member 'bar' in module '0x2::X'

error[E03005]: unbound unscoped name
   ┌─ tests/move_check/expansion/use_spec_function_as_normal_function.move:12:9
   │
12 │         foo();
   │         ^^^ Unbound function 'foo' in current scope

error[E03005]: unbound unscoped name
   ┌─ tests/move_check/expansion/use_spec_function_as_normal_function.move:13:9
   │
13 │         baz();
   │         ^^^ Unbound function 'baz' in current scope

